tests/baselines/reference/regularExpressionAnnexB.errors.txt
regularExpressionAnnexB.ts(2,10): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(2,24): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(2,30): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(3,11): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(3,25): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(3,31): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(7,6): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(7,10): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(7,12): error TS1512: '\c' must be followed by an ASCII letter.
regularExpressionAnnexB.ts(7,14): error TS1510: '\k' must be followed by a capturing group name enclosed in angle brackets.
regularExpressionAnnexB.ts(7,16): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(7,20): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(7,24): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(7,26): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(7,30): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(7,32): error TS1531: '\p' must be followed by a Unicode property value expression enclosed in braces.
regularExpressionAnnexB.ts(8,7): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(8,11): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(8,13): error TS1512: '\c' must be followed by an ASCII letter.
regularExpressionAnnexB.ts(8,15): error TS1545: '\k' is only available outside character class.
regularExpressionAnnexB.ts(8,17): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(8,21): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(8,25): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(8,27): error TS1535: This character cannot be escaped in a regular expression.
regularExpressionAnnexB.ts(8,31): error TS1125: Hexadecimal digit expected.
regularExpressionAnnexB.ts(8,33): error TS1531: '\p' must be followed by a Unicode property value expression enclosed in braces.
regularExpressionAnnexB.ts(9,6): error TS1531: '\P' must be followed by a Unicode property value expression enclosed in braces.
regularExpressionAnnexB.ts(9,9): error TS1531: '\P' must be followed by a Unicode property value expression enclosed in braces.
regularExpressionAnnexB.ts(9,11): error TS1516: A character class range must not be bounded by another character class.
regularExpressionAnnexB.ts(24,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(24,10): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(25,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(25,11): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(26,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(26,12): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(27,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(27,7): error TS1506: Numbers out of order in quantifier.
regularExpressionAnnexB.ts(27,12): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(30,6): error TS1508: Unexpected '{'. Did you mean to escape it with backslash?
regularExpressionAnnexB.ts(31,6): error TS1508: Unexpected '{'. Did you mean to escape it with backslash?
regularExpressionAnnexB.ts(32,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(32,7): error TS1505: Incomplete quantifier. Digit expected.
regularExpressionAnnexB.ts(32,9): error TS1005: '}' expected.
regularExpressionAnnexB.ts(32,10): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(33,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(33,8): error TS1005: '}' expected.
regularExpressionAnnexB.ts(33,9): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(34,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(34,9): error TS1005: '}' expected.
regularExpressionAnnexB.ts(34,10): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(35,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(35,10): error TS1005: '}' expected.
regularExpressionAnnexB.ts(35,11): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(36,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(36,7): error TS1506: Numbers out of order in quantifier.
regularExpressionAnnexB.ts(36,10): error TS1005: '}' expected.
regularExpressionAnnexB.ts(36,11): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(37,6): error TS1508: Unexpected '{'. Did you mean to escape it with backslash?
regularExpressionAnnexB.ts(37,7): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
regularExpressionAnnexB.ts(38,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(38,7): error TS1505: Incomplete quantifier. Digit expected.
regularExpressionAnnexB.ts(38,10): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(39,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(39,7): error TS1505: Incomplete quantifier. Digit expected.
regularExpressionAnnexB.ts(39,11): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(40,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(40,10): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(41,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(41,11): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(42,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(42,12): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(43,6): error TS1507: There is nothing available for repetition.
regularExpressionAnnexB.ts(43,7): error TS1506: Numbers out of order in quantifier.
regularExpressionAnnexB.ts(43,12): error TS1507: There is nothing available for repetition.


==== regularExpressionAnnexB.ts (74 errors) ====
    {
        /\q\u\i\c\k\_\f\o\x\-\j\u\m\p\s/;
             
!!! error TS1125: Hexadecimal digit expected.
                           
!!! error TS1125: Hexadecimal digit expected.
                                 
!!! error TS1125: Hexadecimal digit expected.
        /[\q\u\i\c\k\_\f\o\x\-\j\u\m\p\s]/;
              
!!! error TS1125: Hexadecimal digit expected.
                            
!!! error TS1125: Hexadecimal digit expected.
                                  
!!! error TS1125: Hexadecimal digit expected.
        /\P[\P\w-_]/;
        
        // Compare to
        /\q\u\i\c\k\_\f\o\x\-\j\u\m\p\s/u;
         ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
             
!!! error TS1125: Hexadecimal digit expected.
               ~~
!!! error TS1512: '\c' must be followed by an ASCII letter.
                 ~~
!!! error TS1510: '\k' must be followed by a capturing group name enclosed in angle brackets.
                   ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
                       ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
                           
!!! error TS1125: Hexadecimal digit expected.
                             ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
                                 
!!! error TS1125: Hexadecimal digit expected.
                                   ~~
!!! error TS1531: '\p' must be followed by a Unicode property value expression enclosed in braces.
        /[\q\u\i\c\k\_\f\o\x\-\j\u\m\p\s]/u;
          ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
              
!!! error TS1125: Hexadecimal digit expected.
                ~~
!!! error TS1512: '\c' must be followed by an ASCII letter.
                  ~~
!!! error TS1545: '\k' is only available outside character class.
                    ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
                        ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
                            
!!! error TS1125: Hexadecimal digit expected.
                              ~~
!!! error TS1535: This character cannot be escaped in a regular expression.
                                  
!!! error TS1125: Hexadecimal digit expected.
                                    ~~
!!! error TS1531: '\p' must be followed by a Unicode property value expression enclosed in braces.
        /\P[\P\w-_]/u;
         ~~
!!! error TS1531: '\P' must be followed by a Unicode property value expression enclosed in braces.
            ~~
!!! error TS1531: '\P' must be followed by a Unicode property value expression enclosed in braces.
              ~~
!!! error TS1516: A character class range must not be bounded by another character class.
    }
    
    // Regular expressions with braces
    {
        /{??/;
        /{,??/;
        /{,1??/;
        /{1??/;
        /{1,??/;
        /{1,2??/;
        /{2,1??/;
        /{}??/;
        /{,}??/;
        /{,1}??/;
        /{1}??/;
         ~~~~
!!! error TS1507: There is nothing available for repetition.
             ~
!!! error TS1507: There is nothing available for repetition.
        /{1,}??/;
         ~~~~~
!!! error TS1507: There is nothing available for repetition.
              ~
!!! error TS1507: There is nothing available for repetition.
        /{1,2}??/;
         ~~~~~~
!!! error TS1507: There is nothing available for repetition.
               ~
!!! error TS1507: There is nothing available for repetition.
        /{2,1}??/;
         ~~~~~~
!!! error TS1507: There is nothing available for repetition.
          ~~~
!!! error TS1506: Numbers out of order in quantifier.
               ~
!!! error TS1507: There is nothing available for repetition.
    
        // Compare to
        /{??/u;
         ~
!!! error TS1508: Unexpected '{'. Did you mean to escape it with backslash?
        /{,??/u;
         ~
!!! error TS1508: Unexpected '{'. Did you mean to escape it with backslash?
        /{,1??/u;
         ~~~~
!!! error TS1507: There is nothing available for repetition.
          
!!! error TS1505: Incomplete quantifier. Digit expected.
            
!!! error TS1005: '}' expected.
             ~
!!! error TS1507: There is nothing available for repetition.
        /{1??/u;
         ~~~
!!! error TS1507: There is nothing available for repetition.
           
!!! error TS1005: '}' expected.
            ~
!!! error TS1507: There is nothing available for repetition.
        /{1,??/u;
         ~~~~
!!! error TS1507: There is nothing available for repetition.
            
!!! error TS1005: '}' expected.
             ~
!!! error TS1507: There is nothing available for repetition.
        /{1,2??/u;
         ~~~~~
!!! error TS1507: There is nothing available for repetition.
             
!!! error TS1005: '}' expected.
              ~
!!! error TS1507: There is nothing available for repetition.
        /{2,1??/u;
         ~~~~~
!!! error TS1507: There is nothing available for repetition.
          ~~~
!!! error TS1506: Numbers out of order in quantifier.
             
!!! error TS1005: '}' expected.
              ~
!!! error TS1507: There is nothing available for repetition.
        /{}??/u;
         ~
!!! error TS1508: Unexpected '{'. Did you mean to escape it with backslash?
          ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
        /{,}??/u;
         ~~~~
!!! error TS1507: There is nothing available for repetition.
          
!!! error TS1505: Incomplete quantifier. Digit expected.
             ~
!!! error TS1507: There is nothing available for repetition.
        /{,1}??/u;
         ~~~~~
!!! error TS1507: There is nothing available for repetition.
          
!!! error TS1505: Incomplete quantifier. Digit expected.
              ~
!!! error TS1507: There is nothing available for repetition.
        /{1}??/u;
         ~~~~
!!! error TS1507: There is nothing available for repetition.
             ~
!!! error TS1507: There is nothing available for repetition.
        /{1,}??/u;
         ~~~~~
!!! error TS1507: There is nothing available for repetition.
              ~
!!! error TS1507: There is nothing available for repetition.
        /{1,2}??/u;
         ~~~~~~
!!! error TS1507: There is nothing available for repetition.
               ~
!!! error TS1507: There is nothing available for repetition.
        /{2,1}??/u;  
         ~~~~~~
!!! error TS1507: There is nothing available for repetition.
          ~~~
!!! error TS1506: Numbers out of order in quantifier.
               ~
!!! error TS1507: There is nothing available for repetition.
    }
    